syntax = "proto3";
package protobuf;
option go_package = "./";
// option dart_package = "../app/lib/protobuf/api";

message RequestMessage{
    string id = 1;
    string name = 2;
    string message = 3;
}

message ResponseMessage{
    string id = 1;
    string name = 2;
    string message = 3;
}

service MessageService{
    rpc onSend (RequestMessage) returns (ResponseMessage);
}